--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "logo": "",
   "navbarTitle": {
     "logo": "",
-    "text": "Aggregated Indicators KZ"
+    "text": "Рейтинг регионов"
   },
   "author": {
     "name": "Open Data Kazakhstan",
